- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P1: Critical
 - 
    6.7.0
 - 
    None
 
- 
        
 - 
        86aee217c (dev), bbbee9aa1 (6.7)
 
SVG image that has worked in 6.5 doesn't render correctly in 6.7.
Minimal repro (incl screenshot): https://github.com/b0bben/qt_67_svg_b0rk
- resulted in
 - 
                    
QTBUG-124707 Coffee Machine example coffee cup image breaks with Qt 6.7.0 on Android
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTBUG-123994 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 558395,10 | Skip rendering filters with unsupported primitives | dev | qt/qtsvg | Status: MERGED | +2 | +1 | 
| 559654,3 | Skip rendering filters with unsupported primitives | 6.7 | qt/qtsvg | Status: MERGED | +2 | 0 |