src/svg/qsvgnode_p.h
@@ -61,7 +61,8 @@ public:
         FeGaussianblur,
         FeOffset,
         FeComposite,
-        FeFlood
+        FeFlood,
+        FeUnsupported
     };
     enum DisplayMode {
         InlineMode,
